Toasty and layout fixations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -44,6 +45,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'me.spark:submitbutton:1.0.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
