no internet dialogbox customized

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.0.7'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'me.spark:submitbutton:1.0.1'
+    implementation 'am.appwise.components:NoInternetDialog:1.1.3'
+
+
 
 
 }
