--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ignite19">
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -14,6 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_fire"
         android:supportsRtl="true"
+        tools:replace="android:theme"
         android:theme="@style/AppTheme">
         <activity android:name=".showResults"
             android:screenOrientation="portrait"></activity>
