--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,32 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ignite19">
 
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_fire"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_fire"
         android:supportsRtl="true"
-        tools:replace="android:theme"
-        android:theme="@style/AppTheme">
-        <activity android:name=".showResults"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".ui.AboutApp.ourTeam"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Admin.AdminAddTeam.AdminRegisterTeam"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Admin.AdminHomeAcitivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".LoginActivity"
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme">
+
+        <activity android:name=".splash" />
+        <activity
+            android:name=".showResults"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.AboutApp.ourTeam"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Admin.AdminAddTeam.AdminRegisterTeam"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Admin.AdminHomeAcitivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LoginActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,8 +37,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".myFirebaseMessagingService">
@@ -47,5 +47,11 @@
             </intent-filter>
         </service>
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 </manifest>
