--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_fire"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_fire"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
@@ -15,9 +15,6 @@
         <activity android:name=".splash" />
         <activity
             android:name=".showResults"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.AboutApp.ourTeam"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Admin.AdminAddTeam.AdminRegisterTeam"
@@ -41,7 +38,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <service android:name=".myFirebaseMessagingService">
+        <service android:name=".myFirebaseMessagingService"
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
