--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'me.spark:submitbutton:1.0.1'
     implementation 'am.appwise.components:NoInternetDialog:1.1.3'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.github.vipulasri:timelineview:1.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
